WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270796
Regression: Pages that display notifications now get suspended as soon as backgrounded
https://bugs.webkit.org/show_bug.cgi?id=270796
Summary
Regression: Pages that display notifications now get suspended as soon as bac...
Chris Dumez
Reported
2024-03-11 08:41:22 PDT
We used to prevent suspension in the background of pages that show (or are likely to show) notifications. However, we recently stopped taking near-suspended assertions on both iOS and macOS and it broke this heuristic.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-03-11 08:41:43 PDT
<
rdar://problem/124390299
>
Chris Dumez
Comment 2
2024-03-11 08:44:34 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/25719
EWS
Comment 3
2024-03-11 12:29:58 PDT
Committed
275921@main
(0a93df5a4011): <
https://commits.webkit.org/275921@main
> Reviewed commits have been landed. Closing PR #25719 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug