Cherry-pick 275921@main (0a93df5a4011). https://bugs.webkit.org/show_bug.cgi?id=270796

Regression: Pages that display notifications now get suspended as soon as backgrounded
    https://bugs.webkit.org/show_bug.cgi?id=270796
    rdar://124390299

    Reviewed by Ben Nham.

    We used to prevent suspension in the background of pages that show (or are
    likely to show) notifications. However, we recently stopped taking
    near-suspended assertions on both iOS and macOS and it broke this heuristic.

    To address the issue, we now take a background activity whenever we get a
    signal that a page displayed (or is likely to display) notifications. This way,
    the page won't suspend after backgrounding, even though we're no longer taking
    near-suspended assertions.

    Note that the heuristic was also checking if a page updated its title while in
    the background. This part of the heuristic is still broken and still needs to
    be addressed in a follow-up.

    * Source/WebKit/UIProcess/WebPageProxy.cpp:
    (WebKit::WebPageProxy::didCommitLoadForFrame):
    (WebKit::WebPageProxy::didFailLoadForFrame):
    (WebKit::WebPageProxy::resetStateAfterProcessExited):
    (WebKit::WebPageProxy::pageWillLikelyUseNotifications):
    (WebKit::WebPageProxy::showNotification):
    * Source/WebKit/UIProcess/WebPageProxyInternals.h:

    Canonical link: https://commits.webkit.org/275921@main

Canonical link: https://commits.webkit.org/274313.378@webkitglib/2.44